@startuml

title __CONTROLLERS's Class Diagram__\n

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class ErrorHandler {
          + handleError()
          + getErrorPath()
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class Error {
          ~ error : HashMap<String, Integer>
          + Error()
          + getError()
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class HelpController {
          + help()
      }
    }
  }
  

  package com.madrat.spaceshooter.apiserver {
    package com.madrat.spaceshooter.apiserver.controllers {
      class UserController {
          + scoreboard()
          + updateScore()
      }
    }
  }
  

  ErrorHandler -up-|> ErrorController
  ErrorHandler +-down- Error
  UserController o-- UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
